--- a/index.html
+++ b/index.html
@@ -405,6 +405,19 @@
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-8" role="contentinfo">
+
+        <div class="container mx-auto px-4 text-center">
+        <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
+            <ul class="mt-4 flex justify-center space-x-4">
+                <li><a href="index.html#hero" class="hover:text-primary">Home</a></li>
+                <li><a href="index.html#about" class="hover:text-primary">Über mich</a></li>
+                <li><a href="index.html#services" class="hover:text-primary">Services</a></li>
+                <li><a href="index.html#portfolio" class="hover:text-primary">Portfolio</a></li>
+                <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
+                <li><a href="impressum.html" class="hover:text-primary">Impressum</a></li>
+            </ul>
+        </div>
+        
         <div class="container mx-auto px-4 text-center">
             <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
             <ul class="mt-4 flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6">
@@ -462,36 +475,7 @@
                         </svg>
                     </a>
                 </li>
-                <!-- Hamburger-Menü im Footer -->
-                <li>
-                    <a href="#" id="footer-menu-btn" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Hamburger-Menü" aria-expanded="false" aria-controls="footer-mobile-menu">
-                        <!-- Hamburger-Icon SVG -->
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512" class="w-6 h-6 fill-current">
-                            <!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free -->
-                            <path d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 
-                            96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"/>
-                        </svg>
-                    </a>
-                </li>
             </ul>
-            <!-- Mobile Menü im Footer -->
-            <div id="footer-mobile-menu" class="hidden mt-4 flex flex-col space-y-2 md:hidden" role="navigation" aria-label="Footer Mobile Hauptnavigation">
-                <a href="#hero" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a>
-                <a href="#about" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Über mich</a>
-                <a href="#services" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Services</a>
-                <a href="#portfolio" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Portfolio</a>
-                <a href="#contact" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a>
-            </div>
-            <div class="mt-4 flex justify-center space-x-4">
-                <!-- Weitere Footer-Inhalte (z.B. zusätzliche Links oder Informationen) können hier eingefügt werden -->
-                <!-- Beispiel: Zusätzliche Links -->
-                <a href="#" class="hover:text-red-500" aria-label="Datenschutz">
-                    Datenschutz
-                </a>
-                <a href="#" class="hover:text-red-500" aria-label="Impressum">
-                    Impressum
-                </a>
-            </div>
         </div>
     </footer>
 
