--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </style>
 
     <!-- Tailwind CSS kompiliert und minimiert -->
-    <link rel="stylesheet" href="styles.css?v=1.0">
+    
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
     <!-- Preconnect für Performance -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
