--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <div class="md:hidden">
                 <button id="header-menu-btn" class="text-gray-800 text-2xl focus:outline-none transition-transform duration-300 ease-in-out" aria-label="Menü" aria-expanded="false" aria-controls="header-mobile-menu">
                     <!-- Neues Hamburger-Icon SVG -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 fill-current">
-                        <path class="line1" d="M4 6h16"/>
-                        <path class="line2" d="M4 12h16"/>
-                        <path class="line3" d="M4 18h16"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 text-black fill-current">
+                        <path class="line1" d="M4 6h16" stroke="black" stroke-width="2"/>
+                        <path class="line2" d="M4 12h16" stroke="black" stroke-width="2"/>
+                        <path class="line3" d="M4 18h16" stroke="black" stroke-width="2"/>
                     </svg>
                 </button>
             </div>
@@ -101,6 +101,7 @@
                 <a href="#contact" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a>
             </nav>
         </div>
+
     </header>
 
     
