--- a/index.html
+++ b/index.html
@@ -426,18 +426,16 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-8" role="contentinfo">
         <div class="container mx-auto px-4 text-center">
-        <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
-            <ul class="mt-4 flex justify-center space-x-4">
-                <li><a href="index.html#hero" class="hover:text-primary">Home</a></li>
-                <li><a href="index.html#about" class="hover:text-primary">Über mich</a></li>
-                <li><a href="index.html#services" class="hover:text-primary">Services</a></li>
-                <li><a href="index.html#portfolio" class="hover:text-primary">Portfolio</a></li>
-                <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
-                <li><a href="impressum.html" class="hover:text-primary">Impressum</a></li>
-            </ul>
-        </div>
-        
-        <div class="container mx-auto px-4 text-center">
+            <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
+                <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
+                    <li><a href="index.html#hero" class="hover:text-primary">Home</a></li>
+                    <li><a href="index.html#about" class="hover:text-primary">Über mich</a></li>
+                    <li><a href="index.html#services" class="hover:text-primary">Services</a></li>
+                    <li><a href="index.html#portfolio" class="hover:text-primary">Portfolio</a></li>
+                    <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
+                    <li><a href="impressum.html" class="hover:text-primary">Impressum</a></li>
+                </ul>      
+        <div class="container flex justify-center space-x-4">
             <ul class="mt-4 flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6">
                 <!-- Facebook -->
                 <li>
