--- a/index.html
+++ b/index.html
@@ -428,15 +428,14 @@
         <div class="container mx-auto px-4 text-center">
             <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
                 <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
-                    <li><a href="index.html#hero" class="hover:text-primary">Home</a></li>
-                    <li><a href="index.html#about" class="hover:text-primary">Über mich</a></li>
-                    <li><a href="index.html#services" class="hover:text-primary">Services</a></li>
-                    <li><a href="index.html#portfolio" class="hover:text-primary">Portfolio</a></li>
-                    <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
-                    <li><a href="impressum.html" class="hover:text-primary">Impressum</a></li>
-                </ul>      
+                    <li><a href="#hero" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a></li>
+                    <li><a href="#about" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Über mich</a></li>
+                    <li><a href="#services" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Services</a></li>
+                    <li><a href="#portfolio" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Portfolio</a></li>
+                    <li><a href="#contact" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a></li>
+                    <li><a href="impressum.html" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Impressum</a></li>
+                </ul>   
         <div class="container flex justify-center space-x-4">
-            <ul class="mt-4 flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6">
                 <!-- Facebook -->
                 <li>
                     <a href="https://www.facebook.com/IhrProfil" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook">
@@ -478,7 +477,6 @@
                         </svg>
                     </a>
                 </li>
-            </ul>
         </div>
     </footer>
 
