--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     <li><a href="#contact" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a></li>
                     <li><a href="impressum.html" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Impressum</a></li>
                 </ul>   
-        <div class="container flex justify-center space-x-4">
+        <div class="container flex justify-center space-x-4 pt-4">
                 <!-- Facebook -->
                     <a href="https://www.facebook.com/IhrProfil" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook">
                         <!-- Facebook SVG -->
